<resources>
    <string name="please_wait">Please wait…</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="no_internet">Check your internet connection once</string>
    <string name="info">Info</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="verification_label">We will send you a One Time Password to this mobile number</string>
    <string name="get_otp">GET OTP</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="edit_number"><u>Edit Number</u></string>
    <string name="default_country_code">+91</string>
    <string name="yes">Yes</string>
    <string name="success">Success</string>
    <string name="failed_to_find_user">Failed to find user data</string>
    <string name="data_fetching_failed">Failed to retrieve the data</string>
    <string name="incorrect_code">Incorrect verification code</string>
    <string name="sign_in_failed">Failed to sign in</string>
    <string name="no">No</string>
    <string name="disabled_account">Your account has been disabled. Please contact our support team.</string>
    <string name="enter_code_here">Enter code here</string>
    <string name="error_occurred">Error occurred. Please try again…</string>
    <string name="empty_mobile_number">Please enter your mobile number</string>
    <string name="server_contact_failed">Failed to communicate with the server. Please try again.</string>
    <string name="incorrect_mobile_number">Check your mobile number once</string>
    <string name="too_many_verify_attempts">We received too many requests from your account. Please try again after some time.</string>
    <string name="code_sent">Verification code has been sent.</string>
    <string name="verification_failed">Failed to verify the mobile number.</string>
    <string name="verification_success">Mobile number verified successfully</string>
    <string name="verify_proceed">Verify &amp; proceed</string>
    <string name="verification_code_sent_template">Enter the verification code sent to +91-{mobile_number}</string>
    <string name="empty_otp">OTP cannot be empty…</string>
    <string name="confirmation">Confirmation</string>
    <string name="exit_confirmation">Are you sure you want to exit?</string>
    <string name="powered_by">Powered by</string>
    <string name="name">Name</string>
    <string name="alternate_number_optional">Alternate Number (Optional)</string>
    <string name="alternate_number">Alternate Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address_optional">Email Address (Optional)</string>
    <string name="email_address">Email Address</string>
    <string name="dob">Date of Birth</string>
    <string name="address">Address</string>
    <string name="submit">SUBMIT</string>
    <string name="cant_edit_number">You can\'t edit this number</string>
    <string name="empty_name">Name cannot be empty</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="empty_address">Address cannot be empty</string>
    <string name="registration_failed">Failed to register. Please try again…</string>
    <string name="registration_success">Successfully Registered…</string>
    <string name="help">Help</string>
    <string name="share_this_application">Share this application</string>
    <string name="logout">Logout</string>
    <string name="help_label">Please read the Terms Of Service and Privacy Policy carefully.</string>
    <string name="want_to_exit">Are you sure you want to exit?</string>
    <string name="want_to_logout">Are you sure you want to logout?</string>
    <string name="home">Home</string>
    <string name="my_rides">My Rides</string>
    <string name="profile">Profile</string>
    <string name="n_a">N/A</string>
    <string name="check_alternate_number">Check alternate number once</string>
</resources>