<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_my_rides"
            android:icon="@drawable/ic_my_rides"
            android:title="@string/my_rides" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/help" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share_this_application" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />

    </group>

    <!--<group
        android:id="@+id/nav_admin_console"
        android:checkableBehavior="single">
        <item android:title="@string/admin_console">
            <menu>
                <item
                    android:id="@+id/nav_all_orders"
                    android:icon="@drawable/ic_list"
                    android:title="@string/all_orders" />

                <item
                    android:id="@+id/nav_bulk_orders"
                    android:icon="@drawable/ic_bulk_order"
                    android:title="@string/bulk_orders" />

                <item
                    android:id="@+id/nav_store_items"
                    android:icon="@drawable/ic_fork"
                    android:title="@string/store_items" />

                <item
                    android:id="@+id/nav_users"
                    android:icon="@drawable/ic_users"
                    android:title="@string/users" />
            </menu>
        </item>
    </group>
-->
</menu>
