<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/app_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="14sp"
            android:id="@+id/name_tv"
            android:textColor="@color/grey"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_logo"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:background="@drawable/bg_hollow_grey_round"
            android:textSize="16sp"
            android:inputType="textPersonName"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/name_tv"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alternate_number_optional"
            android:textSize="14sp"
            android:id="@+id/emergency_number_tv"
            android:textColor="@color/grey"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emergency_number"
            android:background="@drawable/bg_hollow_grey_round"
            android:textSize="16sp"
            android:maxLength="10"
            android:inputType="phone"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/emergency_number_tv"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textSize="14sp"
            android:id="@+id/email_tv"
            android:textColor="@color/grey"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emergency_number"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_address"
            android:background="@drawable/bg_hollow_grey_round"
            android:textSize="16sp"
            android:inputType="textEmailAddress"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/email_tv"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dob"
            android:textSize="14sp"
            android:id="@+id/dob_tv"
            android:textColor="@color/grey"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_address"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dob"
            android:background="@drawable/bg_hollow_grey_round"
            android:textSize="16sp"
            android:inputType="text"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/dob_tv"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="14sp"
            android:id="@+id/address_tv"
            android:textColor="@color/grey"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dob"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/address"
            android:background="@drawable/bg_hollow_grey_round"
            android:textSize="16sp"
            android:lines="5"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/address_tv"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textStyle="bold"
            android:id="@+id/submit"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/bg_solid_blue_round"
            app:layout_constraintTop_toBottomOf="@id/address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>