<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:id="@+id/initials"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:text="KV"
                    android:background="@drawable/bg_solid_blue_oval"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textAllCaps="true"
                    app:layout_constraintTop_toTopOf="@id/avatar"
                    app:layout_constraintBottom_toBottomOf="@id/avatar"
                    app:layout_constraintStart_toStartOf="@id/avatar"
                    app:layout_constraintEnd_toEndOf="@id/avatar"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/avatar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/bg_solid_orange_oval"
                    android:padding="6dp"
                    android:layout_margin="5dp"
                    android:tint="@color/white"
                    android:id="@+id/edit_icon"
                    android:src="@drawable/ic_pencil_edit"
                    app:layout_constraintEnd_toEndOf="@id/avatar"
                    app:layout_constraintBottom_toBottomOf="@id/avatar"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_name"
                    android:textColor="@color/black"
                    android:layout_marginTop="8dp"
                    android:text="User Full Name"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/avatar"/>

                <TextView
                    android:id="@+id/user_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_gravity="center_horizontal"
                    android:text="User Info"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/user_name"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="14sp"
                android:id="@+id/name_tv"
                android:textColor="@color/grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:background="@drawable/bg_hollow_grey_round"
                android:textSize="16sp"
                android:inputType="textPersonName"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/name_tv"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_number"
                android:textSize="14sp"
                android:id="@+id/number_tv"
                android:textColor="@color/grey"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/number"
                android:background="@drawable/bg_hollow_grey_round"
                android:textSize="16sp"
                android:maxLength="10"
                android:focusable="false"
                android:inputType="phone"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/number_tv"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alternate_number_optional"
                android:textSize="14sp"
                android:id="@+id/number2_tv"
                android:textColor="@color/grey"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/number"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/number2"
                android:background="@drawable/bg_hollow_grey_round"
                android:textSize="16sp"
                android:maxLength="10"
                android:inputType="phone"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/number2_tv"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_address_optional"
                android:textSize="14sp"
                android:id="@+id/email_tv"
                android:textColor="@color/grey"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/number2"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_address"
                android:background="@drawable/bg_hollow_grey_round"
                android:textSize="16sp"
                android:inputType="textEmailAddress"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/email_tv"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="14sp"
                android:id="@+id/address_tv"
                android:textColor="@color/grey"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_address"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/address"
                android:background="@drawable/bg_hollow_grey_round"
                android:textSize="16sp"
                android:lines="5"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/address_tv"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textStyle="bold"
                android:id="@+id/submit"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/bg_solid_blue_round"
                app:layout_constraintTop_toBottomOf="@id/address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</ScrollView>